# route-audio

./: .gitignore  Cargo.toml  readme.md
src/: audio_client.rs  devices.rs  graph_builder.rs  lib.rs  main.rs  main_old.rs  readme.md  route_audio_error.rs  router.rs  session.rs  util.rs
src/graph/: audio_buffer.rs  audio_format.rs  capture_node.rs  construction.rs  mod.rs  render_node.rs  sample_rate_converter.rs  split_node.rs
src/platform/: mod.rs
src/platform/windows/: audio_capture_client.rs  audio_client.rs  audio_render_client.rs  device.rs  device_collection.rs  device_enumerator.rs  mod.rs  session.rs
